Build out personal landing foundations

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,22 +1,54 @@
-<section class="hero">  
-    <h1 class="hero_title">Resources for tech and crypto investors.</h1>
-    <div class="hero_flex">
-      <div class="hero_item">              
-        <div class="icon_wrapper">          
-          <i class="fas fa-newspaper"></i>
+<div id="wallpaper" class="wallpaper" data-image="images/austria.jpg"></div>
+    <div class="content">
+      <aside class="side">
+        <figure id="picture" class="picture">
+          <div class="picture-shadow"></div>
+          <img id="pictureImage" class="picture-image"
+               src="images/alex.jpg"
+               srcset="images/alex.jpg 1x,
+                       images/alex@2x.jpg 2x,
+                       images/alex@3x.jpg 3x"
+               alt="Portrait of Daniel Easterman"
+               width="320"
+               height="320">
+        </figure>
+      </aside>
+      <main class="about">
+        <h1 class="name">
+          Hey, I'm Daniel
+        </h1>
+        <p class="job">
+          Founder / Software Developer
+        </p>
+        <hr class="hr">
+        <div class="description">
+          <p>
+            I spend my time traveling the world,
+            helping startups and tech businesses
+            hire the best people.
+          </p>
         </div>
-        <p class="item_title">Substack</p>  
-        <p class="blurb">Clear and concise reports analysing tech stocks and crypto projects - delivered to your inbox every week.</p>
-        <a class="item_button" href="">Check It Out</a>
-      </div>
-      <div class="hero_item">
-        <div class="icon_wrapper">
-          <i class="fab fa-slack"></i>
+        <div class="contact">
+          <a class="button" href="mailto:youremail@example.com">
+            Get in touch
+          </a>
         </div>
-        <p class="item_title">Slack App</p>
-        <p class="blurb">Quickly share stock and crypto price information in your Slack channels with two simple commands.</p>
-        <a class="item_button" href="">Check It Out</a>
-      </div>
+        <ul class="social">
+          <li>
+            <a href="https://twitter.com/daneasterman">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/daneasterman">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://uk.linkedin.com/in/danieleasterman">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+        </ul>
+      </main>
     </div>
-</section>
-
