--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body> 
-      {% include nav.html %}
+  <body>      
       {% include hero.html %}
-      {% include footer.html %}
+      {% include noscript.html %}
   </body>
 </html>
