--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
   <!-- Custom Fonts --> 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
+  <script defer type="text/javascript" src="js/main.js"></script>
   <!-- Font Awesome Icons -->
 	<script src="https://kit.fontawesome.com/8e7f20e358.js" crossorigin="anonymous"></script>
 </head>
