All responsive design, plus content done

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,13 +1,14 @@
-<div id="wallpaper" class="wallpaper" data-image="images/austria.jpg"></div>
+<div id="wallpaper" class="wallpaper" data-image="img/alhambra.jpg"></div>
     <div class="content">
+      <div class="content_wrapper">
       <aside class="side">
         <figure id="picture" class="picture">
           <div class="picture-shadow"></div>
           <img id="pictureImage" class="picture-image"
-               src="images/alex.jpg"
-               srcset="images/alex.jpg 1x,
-                       images/alex@2x.jpg 2x,
-                       images/alex@3x.jpg 3x"
+               src="img/dan.jpg"
+               srcset="img/dan.jpg 1x,
+                       img/dan@2x.jpg 2x,
+                       img/dan@3x.jpg 3x"
                alt="Portrait of Daniel Easterman"
                width="320"
                height="320">
@@ -15,7 +16,7 @@
       </aside>
       <main class="about">
         <h1 class="name">
-          Hey, I'm Daniel
+          Daniel Easterman
         </h1>
         <p class="job">
           Founder / Software Developer
@@ -23,16 +24,9 @@
         <hr class="hr">
         <div class="description">
           <p>
-            I spend my time traveling the world,
-            helping startups and tech businesses
-            hire the best people.
+            Former Journalist. Coding in Python.<br>I write about tech stocks, crypto and web3.
           </p>
-        </div>
-        <div class="contact">
-          <a class="button" href="mailto:youremail@example.com">
-            Get in touch
-          </a>
-        </div>
+        </div>        
         <ul class="social">
           <li>
             <a href="https://twitter.com/daneasterman">
@@ -51,4 +45,5 @@
           </li>
         </ul>
       </main>
+      </div>
     </div>
