--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,6 +3,7 @@
   {% include head.html %}
   <body>      
       {% include hero.html %}
+      {% include footer.html %}
       {% include noscript.html %}
   </body>
 </html>
