Footer copy change

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 <footer>
 	<div class="footer_wrapper">
 		<p class="image_reference">
-			Background photo taken by Daniel Easterman. See: <a href="https://en.wikipedia.org/wiki/Alhambra">Alhambra.</a>
+			Background photograph taken by Daniel Easterman. See: <a href="https://en.wikipedia.org/wiki/Alhambra">Alhambra.</a>
 		</p>		
 </div>
 </footer>
