Fix extra padding in about

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -15,12 +15,8 @@
         </figure>
       </aside>
       <main class="about">
-        <h1 class="name">
-          Daniel Easterman
-        </h1>
-        <p class="job">
-          Founder / Software Developer
-        </p>
+        <h1 class="name">Daniel Easterman</h1>
+        <p class="job">Founder / Software Developer</p>
         <hr class="hr">
         <div class="description">
           <p>
