--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,11 @@
 		display: flex;
 		justify-content: center;
 		position: relative;
-		padding-top: 1.25rem;
-    padding-bottom: 1rem;
+		padding: 1.25rem 1.5rem 1rem 1.5rem;    
 		background-color: rgba(0,0,0,0.4);		
 		font-size: 0.9rem;
+		text-align: center;
+
 	}
 	.image_reference a {
 		text-decoration: underline;
