Open link in new tab, copy changes, pfp max width adjust

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
 <footer>
 	<div class="footer_wrapper">
 		<p class="image_reference">
-			Background photograph taken by Daniel Easterman. See: <a href="https://en.wikipedia.org/wiki/Alhambra">Alhambra.</a>
+			Background photograph taken by Daniel Easterman. See: <a target="_blank" href="https://en.wikipedia.org/wiki/Alhambra">Alhambra</a> and <a target="_blank" href="https://en.wikipedia.org/wiki/Islamic_Golden_Age">Golden Age.</a>
 		</p>		
 </div>
 </footer>
