--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -20,22 +20,22 @@
         <hr class="hr">
         <div class="description">
           <p>
-            Former Journalist. Coding in Python.<br>I write about tech stocks, crypto and web3.
+            Former Journalist. Coding in Python.<br>Interested in tech stocks, crypto and web3.
           </p>
         </div>        
         <ul class="social">
           <li>
-            <a href="https://twitter.com/daneasterman">
+            <a target="_blank"href="https://twitter.com/daneasterman">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
           <li>
-            <a href="https://github.com/daneasterman">
+            <a target="_blank" href="https://github.com/daneasterman">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li>
-            <a href="https://uk.linkedin.com/in/danieleasterman">
+            <a target="_blank" href="https://uk.linkedin.com/in/danieleasterman">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
