--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,8 @@
   <!-- Resets -->
   <link rel="stylesheet" href="css/minireset.min.css"> 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/styles.css">  
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/animations.css">
   <!-- Custom Fonts --> 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
