Change hero text

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -20,7 +20,7 @@
         <hr class="hr">
         <div class="description">
           <p>
-            Former Journalist. Coding in Python.<br>Interested in tech, crypto and web3.
+            Former Journalist.<br>Coding in Python and Javascript.<br>Interested in all things tech and web3.
           </p>
         </div>        
         <ul class="social">
