Change copy and add medium link

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -9,7 +9,7 @@
                srcset="img/dan.jpg 1x,
                        img/dan@2x.jpg 2x,
                        img/dan@3x.jpg 3x"
-               alt="Portrait of Daniel Easterman"
+               alt="Profile Picture Daniel Easterman"
                width="320"
                height="320">
         </figure>
@@ -20,10 +20,15 @@
         <hr class="hr">
         <div class="description">
           <p>
-            Former Journalist.<br>Coding in Python and Javascript.<br>Interested in all things tech and web3.
+            Journalist-turned-Developer.<br>Coding in Python and Javascript.<br>Interested in all things tech and web3.
           </p>
         </div>        
         <ul class="social">
+          <li>
+            <a target="_blank" href="https://medium.com/@daneasterman">
+              <i class="fab fa-medium"></i>
+            </a>
+          </li>
           <li>
             <a target="_blank" href="https://twitter.com/daneasterman">
               <i class="fab fa-twitter"></i>
