--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,9 @@
   <title>{{ site.title }}</title>    
   <!-- Debug CSS -->
   <!-- <link rel="stylesheet" href="css/debug.css"> -->
+  <!-- Favicons -->
+  <link rel="icon" href="img/favicons/dan.ico">
+  <link rel="alternate icon" href="img/favicons/dan.png">
   <!-- Resets -->
   <link rel="stylesheet" href="css/minireset.min.css"> 
   <!-- Custom CSS -->
