Integrates timeline js and killer apps data

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -21,7 +21,7 @@
         <hr class="hr">
         <div class="description">
           <p>
-            Journalist-turned-Developer.<br>Coding in Python and Javascript.<br>Interested in all things tech and web3.
+            Journalist-turned-Developer.<br>Coding in Python and Javascript.<br>Interested in all things tech.
           </p>
         </div>        
         <ul class="social">
