--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,13 +8,13 @@
   <!-- Debug CSS -->
   <!-- <link rel="stylesheet" href="css/debug.css"> -->
   <!-- Favicons -->
-  <link rel="icon" href="img/favicons/dan.ico">
-  <link rel="alternate icon" href="img/favicons/dan.png">
+  <link rel="icon" href="/img/favicons/dan.ico">
+  <link rel="alternate icon" href="/img/favicons/dan.png">
   <!-- Resets -->
-  <link rel="stylesheet" href="css/minireset.min.css"> 
+  <link rel="stylesheet" href="/css/minireset.min.css"> 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/animations.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/css/animations.css">
   <link rel="stylesheet" href="/css/timeline.css?v1" />
   <!-- Custom Fonts --> 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap">
@@ -22,7 +22,15 @@
   <!-- Timeline JS Fonts -->
   <link rel="stylesheet" href="/css/fonts/font.default.css?v1" />
 
-  <script defer type="text/javascript" src="js/main.js"></script>
+  <script defer type="text/javascript" src="/js/main.js"></script>
   <!-- Font Awesome 5 Icons -->	
-  <script src="https://use.fontawesome.com/releases/v5.0.0/js/all.js" crossorigin="anonymous"></script>  
+  <script src="https://use.fontawesome.com/releases/v5.0.0/js/all.js" crossorigin="anonymous"></script> 
+
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "hoyqqxgl6c");
+</script>
 </head>
