Add navbar to killer_apps timeline

--- a/_includes/timelines/killer_apps.html
+++ b/_includes/timelines/killer_apps.html
@@ -6,6 +6,8 @@
 			padding: 0px;
 			margin: 0px;
 	}
+	/* Change background color here to match black opaque of nav: */
+	.tl-timeline { background-color: rgba(0,0,0,0.7);	 }
 	.tl-headline { display: none }
 	.tl-timeline h3.tl-headline-date { font-size: 2.5rem; margin-bottom: 1rem; }
 	.tl-slide-media-only .tl-slide-content-container 
