--- a/_layouts/killer_apps.html
+++ b/_layouts/killer_apps.html
@@ -2,6 +2,7 @@
 <html>
   {% include head.html %}
   <body>
+      {% include nav.html %}
 			{% include timelines/killer_apps.html %}
   </body>
 </html>
