--- a/css/styles.css
+++ b/css/styles.css
@@ -183,3 +183,22 @@ a {
   }
 }
 
+/* TIMELINE OVER-RIDES: */
+
+/* Change background color here to match black opaque of nav: */
+.tl-timeline { background-color: rgba(0,0,0,0.7);	 }
+
+.tl-timeline h3.tl-headline-date { font-size: 2.5rem; margin-bottom: 1rem; }
+.tl-slide-media-only .tl-slide-content-container 
+.tl-slide-content .tl-media { max-width: 100%; margin: 0 auto; }
+
+@media screen and (min-width: 768px) {
+.tl-slide-media-only .tl-slide-content-container 
+.tl-slide-content .tl-media { max-width: 50%; margin: 0 auto; }
+}
+
+.tl-media .tl-media-wikipedia p { font-size: 15px; }
+
+.tl-timeline p { font-size: 19px; line-height: 1.2em; }
+
+
