--- a/_layouts/killer_apps.html
+++ b/_layouts/killer_apps.html
@@ -3,6 +3,17 @@
   {% include head.html %}
   <body>
       {% include nav.html %}
-			{% include timelines/killer_apps.html %}
+      <style>
+        html,body { height: 100%; width: 100%; padding: 0; margin: 0; }
+        .tl-headline { display: none }
+      </style>
+      
+      <div id="killer_apps"></div>
+      <script src="../../js/timeline.js"></script>
+        <script>
+            var timeline = new TL.Timeline('killer_apps', '../../json/killer_apps.json', {});
+            window.onresize = function (event) { timeline.updateDisplay(); }
+        </script>
+			
   </body>
 </html>
