--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,9 +23,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
 
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script defer type="text/javascript" src="/js/main.js"></script>
   <!-- Font Awesome 5 Icons -->	
-  <script src="https://use.fontawesome.com/releases/v5.0.0/js/all.js" crossorigin="anonymous"></script> 
+  <script src="https://use.fontawesome.com/releases/v5.0.0/js/all.js" crossorigin="anonymous"></script>
 
   <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
