Change to hero text

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -17,7 +17,7 @@
       </aside>
       <main class="about">
         <h1 class="name">Daniel Easterman</h1>
-        <p class="job">Writer / Software Developer</p>
+        <p class="job">Founder / Software Developer</p>
         <hr class="hr">
         <div class="description">
           <p>
