New Bitcoin text

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -21,9 +21,9 @@
         <hr class="hr">
         <div class="description">
           <p>
-            Journalist-turned-Developer.<br>Coding in Python and Javascript.<br>Interested in all things tech.
+            Exploring Bitcoin business opportunities.<br>Coding in Python and Javascript.<br>Former Technical Writer.
           </p>
-        </div>        
+        </div>
         <ul class="social">
           <li>
             <a target="_blank" href="https://medium.com/@daneasterman">
